@@ -125,8 +125,6 @@ slap_init( int mode, const char *name )
 
 	switch ( slapMode & SLAP_MODE ) {
 	case SLAP_SERVER_MODE:
-		ldap_pvt_thread_pool_init( &connection_pool,
-				connection_pool_max, 0);
 
 		/* FALLTHRU */
 	case SLAP_TOOL_MODE:
@@ -137,6 +135,8 @@ slap_init( int mode, const char *name )
 
 		slap_name = name;
 
+		ldap_pvt_thread_pool_init( &connection_pool,
+				connection_pool_max, 0);
 		ldap_pvt_thread_mutex_init( &entry2str_mutex );
 		ldap_pvt_thread_mutex_init( &replog_mutex );
 
